<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/DIALOGFRAGMENT"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/log_in_to_create_and_interact_with_student_services"
        android:textColor="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailInputLayout"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:drawableStart="@drawable/email_icon"
            style="@style/EDITTEXT"
            android:drawableTint="@color/drawable_tint"
            android:drawablePadding="8dp"
            android:hint="@string/email"

            android:padding="8dp"
            android:autofillHints="emailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordInputLayout"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/password_icon"
        style="@style/EDITTEXT"
        android:drawablePadding="8dp"
        android:drawableTint="@color/drawable_tint"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="338dp"
        android:layout_height="68dp"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/purple"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</LinearLayout>